Change the style of the 'Add New Book' button.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="newb">
-            <button>Add new book</button>
+            <button class='add'>Add New Book</button>
         </div>
 
         <div class="form">
