--- a/index.html
+++ b/index.html
@@ -17,31 +17,47 @@
 
         <div class="form">
             <form action="#" class="myForm">
-                <div class="auth fle">
-                    <label for="author">Author</label>
-                    <input type="text" id="author" name="author">
+                <div class="heading">
+                    <h2 class='head'>What's your new book?</h2>
+
                 </div>
-                <div class="tit fle">
-                    <label for="title">Title</label>
-                    <input type="text" id="title">
+                <div class="middle">
+                    <div class="left">
+                        <div class="auth fle">
+                            <label for="author">Author</label>
+                            <input type="text" id="author" name="author">
+                        </div>
+                        <div class="tit fle">
+                            <label for="title">Title</label>
+                            <input type="text" id="title">
+                        </div>
+                    </div>
+
+                    <div class="right">
+                        <div class="pg fle">
+                            <label for="pages">Pages</label>
+                            <input type="number" id="pages">
+                        </div>
+
+                        <div class="tr fle">
+                            <label for="read">Give it a rating</label>
+                            <input type="num" id="read" class='rate' min='0' max="10">
+                        </div>
+                    </div>
                 </div>
 
-                <div class="pg fle">
-                    <label for="pages">Pages</label>
-                    <input type="number" id="pages">
-                </div>
 
-                <div class="tr fle">
-                    <label for="read">Give it a rating:</label>
-                    <input type="num" id="read" class='rate' min='0' max="10">
-                </div>
                 <div class="btn fle">
                     <button type="submit" class="save ">Save</button>
                 </div>
 
             </form>
         </div>
+
+
+
     </div>
+
     <div class="cardContainer">
 
     </div>
