Changed the book object

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="newb">
             <button class='add'>Add New Book</button>
         </div>
-
+    </div>
+    <div class="formContainer">
         <div class="form">
             <form action="#" class="myForm">
                 <div class="heading">
@@ -54,6 +55,7 @@
             </form>
         </div>
     </div>
+
     <div class="cardContainer">
 
     </div>
