Changed the header of the app

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
     <div class="container">
-        <div class="newb">
-            <button class='add'>Add New Book</button>
+        <div class="header">
+            <h1>Library</h1>
+            <div class="newb">
+                <button class='add'>Add New Book</button>
+            </div>
         </div>
-    </div>
-    <div class="formContainer">
+
         <div class="form">
             <form action="#" class="myForm">
                 <div class="heading">
@@ -54,15 +56,12 @@
 
             </form>
         </div>
+
+        <!---- Card Container-->
+        <div class="cardContainer">
+
+        </div>
     </div>
-
-    <div class="cardContainer">
-
-    </div>
-
-
-
-
     <script src="./script.js"></script>
 </body>
 
