--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header">
             <h1>Library</h1>
             <div class="newb">
-                <button class='add'>Add New Book</button>
+                <button class='add'>New Book</button>
             </div>
         </div>
 
